--- a/changelog.txt
+++ b/changelog.txt
@@ -1,12 +1,13 @@
-V0.9.0
-- Release for F1 25
+V0.90.0
+- Update to F1-25 Telemetry
 - Added Trackmap ("Circle of Doom") which is displayed alongside with the car status
 - Support for "purple sector" in Q
 - Update Render Layout, tested resolutions:
   - 1440p
   - 1080p
   - 1080p tilted
-  - 1280x1024 
+  - 1280x1024
+- Known Bug: Time in "Status" glitching during race / Leader time ok
 
 V0.80
 - Release for F1 24
